Update text for payment division explanations

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 <div style="font-size:14px;line-height:1.6;color:var(--text-muted)">
                     <p style="margin-bottom:10px">✅ <strong>Conserva amistades</strong> — Que el dinero no rompa la fiesta</p>
                     <p style="margin-bottom:10px">✅ <strong>Adiós al caos</strong> — Ni excels, ni gaitas "¿quién pagó qué?"</p>
-                    <p style="margin-bottom:10px">✅ <strong>El prota no paga</strong> — Se divide automáticamente entre los demás</p>
-                    <p style="margin-bottom:10px">✅ <strong>Cada uno lo suyo</strong> — Si no se va a una actividad, no se paga</p>
+                    <p style="margin-bottom:10px">✅ <strong>El prota no paga</strong> — Se divide todo entre los demás</p>
+                    <p style="margin-bottom:10px">✅ <strong>Cada uno lo suyo</strong> — Si no se va a algo, no se paga</p>
                     <p>✅ <strong>Comparte fácil</strong> — PDF y WhatsApp con un click</p>
                 </div>
             </div>
