Add tipo_despedida to event data submission

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@ function sendWebhook() {
             organizador_telefono: E.organizer.phone,
             ciudad: E.city,
             fecha_evento: E.date,
-            num_asistentes: E.attendees.length,
+            tipo_despedida: E.type,
             created_at: E.createdAt
         }),
         mode: 'no-cors'
