Update title and meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="theme-color" content="#E91E63">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Gestor de Despedidas | despedidasgalicia.es</title>
+<title>Calculadora de Gastos para Despedidas | Reparte sin líos</title>
+<meta name="description" content="Calcula cuánto paga cada uno en la despedida: actividades, comidas y extras. Reparte gastos sin discusiones. Galicia: Coruña, Vigo y Sanxenxo." />
+<link rel="canonical" href="https://gastosdespedidas.com/" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Calculadora de Gastos para Despedidas" />
+<meta property="og:description" content="Reparte gastos y controla el presupuesto sin dramas." />
+<meta property="og:url" content="https://gastosdespedidas.com/" />
+<meta name="twitter:card" content="summary_large_image" />
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon-192.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -149,10 +156,10 @@
             <div class="card mb-20">
                 <div class="card-title">💡 ¿Para qué sirve esto?</div>
                 <div style="font-size:14px;line-height:1.6;color:var(--text-muted)">
-                    <p style="margin-bottom:10px">✅ <strong>Conserva amistades</strong> — Que el dinero no estropee la fiesta</p>
-                    <p style="margin-bottom:10px">✅ <strong>Adiós al caos</strong> — Nada de excels, capturas y "¿quién pagó qué?"</p>
-                    <p style="margin-bottom:10px">✅ <strong>El prota no paga</strong> — Se divide automáticamente entre los demás</p>
-                    <p style="margin-bottom:10px">✅ <strong>Cada uno lo suyo</strong> — Si alguien no va a una actividad, no paga</p>
+                    <p style="margin-bottom:10px">✅ <strong>Conserva amistades</strong> — Que el dinero no rompa la fiesta</p>
+                    <p style="margin-bottom:10px">✅ <strong>Adiós al caos</strong> — Ni excels, ni capturas,.. "¿quién pagó qué?"</p>
+                    <p style="margin-bottom:10px">✅ <strong>El prota no paga</strong> — Se divide todo entre los demás</p>
+                    <p style="margin-bottom:10px">✅ <strong>Cada uno lo suyo</strong> — Cada uno/a paga lo que va</p>
                     <p>✅ <strong>Comparte fácil</strong> — PDF y WhatsApp con un click</p>
                 </div>
             </div>
