Add deploy bump comment in index.html

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
         .text-center { text-align: center; }
         .text-muted { color: var(--text-muted); }
     </style>
+<!-- deploy bump -->
+  
 </head>
 <body>
     <div class="app" id="app">
