--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VSWD9JWPTH"></script>
 <script>
@@ -10,25 +11,88 @@
 
   gtag('config', 'G-VSWD9JWPTH');
 </script>  
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#E91E63">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>Calculadora de Gastos para Despedidas | Reparte sin líos</title>
-<meta name="description" content="Calcula cuánto paga cada uno en la despedida: actividades, comidas y extras. Reparte gastos sin discusiones. Galicia: Coruña, Vigo y Sanxenxo." />
-<link rel="canonical" href="https://gastosdespedidas.com/" />
-<meta property="og:type" content="website" />
-<meta property="og:title" content="Calculadora de Gastos para Despedidas" />
-<meta property="og:description" content="Reparte gastos y controla el presupuesto sin dramas." />
-<meta property="og:url" content="https://gastosdespedidas.com/" />
-<meta name="twitter:card" content="summary_large_image" />
+      <title>Calculadora de Gastos para Despedidas | Reparte sin líos</title>
+      <meta name="description" content="Calcula cuánto paga cada uno en la despedida: actividades, comidas y extras. Reparte gastos sin discusiones. Galicia: Coruña, Vigo y Sanxenxo." />
+      <link rel="canonical" href="https://gastosdespedidas.com/" />
+      <meta property="og:type" content="website" />
+      <meta property="og:title" content="Calculadora de Gastos para Despedidas" />
+      <meta property="og:description" content="Reparte gastos y controla el presupuesto sin dramas." />
+      <meta property="og:url" content="https://gastosdespedidas.com/" />
+      <meta name="twitter:card" content="summary_large_image" />
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon-192.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+  #seo-footer {
+    max-width: 980px;
+    margin: 140px auto 48px;
+    padding: 0 16px;
+    text-align: center;
+    position: relative;
+    z-index: 5;
+  }
+
+  #seo-footer summary {
+    cursor: pointer;
+    font-weight: 700;
+    margin-bottom: 12px;
+    list-style: none;
+  }
+
+  #seo-footer summary::-webkit-details-marker { display: none; }
+
+  #seo-footer .seo-card {
+    background: #ffffff;
+    border-radius: 16px;
+    padding: 18px 20px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.12);
+    font-size: 13px;
+    line-height: 1.55;
+    color: #222;
+    max-width: 760px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  #seo-footer p { margin: 10px 0; }
+
+  #seo-footer h3 {
+    margin: 16px 0 8px;
+    font-size: 14px;
+    font-weight: 800;
+  }
+
+  #seo-footer .seo-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  #seo-footer .seo-list li { margin: 6px 0; }
+
+  #seo-footer a {
+    text-decoration: underline;
+    font-weight: 600;
+  }
+
+  @media (max-width: 768px) {
+    #seo-footer { margin: 56px auto 36px; }
+    #seo-footer .seo-card { font-size: 14px; padding: 16px 16px; }
+  }
+</style>
+
+
+  
     <style>
         :root {
             --primary: #E91E63;
@@ -1366,5 +1430,41 @@ document.addEventListener('DOMContentLoaded', function() {
     else nav('screen-home');
 });
 </script>
+
+<footer id="seo-footer">
+  <details>
+    <summary>Información y recursos para despedidas en Galicia</summary>
+
+    <div class="seo-card">
+      <p>
+        La <strong>calculadora de gastos</strong> sirve para repartir el presupuesto de la despedida sin discusiones:
+        actividades, comidas y extras. Cada uno sabe lo que paga y se acaba el caos.
+      </p>
+
+      <p>
+        Si organizáis <strong>despedidas de soltero</strong> o <strong>despedidas de soltera</strong> en Galicia
+        (Coruña, Vigo o Sanxenxo), aquí tenéis herramientas para decidir plan y cerrar packs.
+      </p>
+
+      <h3>Otras herramientas gratuitas</h3>
+      <ul class="seo-list">
+        <li><a href="https://test-despedidas.com/" target="_blank" rel="noopener noreferrer">Test de despedidas (plan en 3 minutos)</a></li>
+        <li><a href="https://ruletadespedidas.com/" target="_blank" rel="noopener noreferrer">Ruleta de despedidas (decidir rápido)</a></li>
+        <li><a href="https://retranca.es/" target="_blank" rel="noopener noreferrer">Retranca (juego para grupos)</a></li>
+      </ul>
+
+      <h3>Packs y organización</h3>
+      <ul class="seo-list">
+        <li><a href="https://despedidasgalicia.es/" target="_blank" rel="noopener noreferrer">Despedidas en Galicia</a></li>
+        <li><a href="https://despedidascoruna.es/" target="_blank" rel="noopener noreferrer">Despedidas en Coruña</a></li>
+        <li><a href="https://despedidasvigo.com/" target="_blank" rel="noopener noreferrer">Despedidas en Vigo</a></li>
+        <li><a href="https://despedidas-sanxenxo.com/" target="_blank" rel="noopener noreferrer">Despedidas en Sanxenxo</a></li>
+        <li><a href="https://www.los7pc.com/" target="_blank" rel="noopener noreferrer">Local para despedidas en Coruña (cenas + show)</a></li>
+      </ul>
+    </div>
+  </details>
+</footer>
+
+  
 </body>
 </html>
